syntax = 'proto3';

package proto; 

message PublishEpisodeMessage {
    string series_name = 1;
    int64 season_no = 2;
    int64 episode_no = 3;
    string episode_url = 4;
}